<resources>
    <string name="ADD_PLAYRULE_API_RBT_CATEGORY_DOESNT_EXIST">We are facing a temporary issue in setting this tune as your Welcome tune. Please try after some time.</string>
    <string name="ADD_PLAYRULE_API_RBT_CONTENT_EXPIRED">We are facing a temporary issue in setting this tune as your Welcome tune. Please try after some time.</string>
    <string name="ADD_PLAYRULE_API_RBT_SONG_EXPIRED">We are facing a temporary issue in setting this tune as your Welcome tune. Please try after some time.</string>
    <string name="ADD_PLAYRULE_API_RBT_SUB_ALREADY_OWNS_CONTENT">This tune is already set as your Welcome tune.</string>
    <string name="ADD_PLAYRULE_API_RBT_SUB_DOESNT_EXIST">Please Register before setting the Welcome tune.</string>
    <string name="ADD_PLAYRULE_API_RBT_SUB_DOESNT_OWN_CONTENT">Dear Customer, Your previous request is already being processed. Kindly try again after some time.</string>
    <string name="Available_balance_after_purchase">Available balance after purchase</string>
    <string name="ConfirmPurchase">Confirm Purchase</string>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="DELETE_SONG_API_RBT_DEACTIVATE_SELECTION_ERROR">We are facing a temporary issue while removing a Welcome tune. Please try after sometime.</string>
    <string name="DELETE_SONG_API_RBT_INVALID_PARAMETER">Dear Customer, Your previous request is already being processed. Kindly try again after some time.</string>
    <string name="GET_PLAYRULE_API_RBT_INVALID_PARAMETER">We are facing a temporary issue. Please try after sometime.</string>
    <string name="GET_PLAYRULE_API_RBT_PLAY_RULE_NOT_EXIST">Hey ! Your callers are listening to the same old boring tring tring. Discover and set a favourite one from a huge library of Welcome tune.</string>
    <string name="GET_PLAYRULE_API_RBT_SUB_DOESNT_EXIST">Hey ! Your callers are listening to the same old boring tring tring. Discover and set a favourite one from a huge library of Welcome tune.</string>
    <string name="GET_PLAYRULE_API_RBT_UNKNOWN_ERROR">We are facing a temporary issue. Please try after sometime.</string>
    <string name="INTERNAL_SERVER_ERROR">Internal server error. You can retry after some times</string>
    <string name="MAX_UDP_CONTENT_LIMIT_REACHED">Oh ! Maximum limit for containing songs in the shuffle has been reached</string>
    <string name="PRICING_API_RBT_INVALID_SUBSCRIBER_STATE">Your deactivation request for Welcome tune service is currently pending. Please try again later.</string>
    <string name="PURCHASE_COMBO_API_CONTENT_BLOCKED_ADRBT">Dear Subscriber, you are currently active on the Welcome tune pack. To deactivate CALL or SMS STOP to 24000 Toll free and then try activating through Welcome tune App.</string>
    <string name="PURCHASE_COMBO_API_CONTENT_BLOCKED_CORP_USER">Corporate tune is active on your number, hence Welcome tune cannot be changed. To change, please contact your Company Admin.</string>
    <string name="PURCHASE_COMBO_API_CONTENT_BLOCKED_LITE_USER">You are not allowed to activate this Welcome tune as this is a premium Welcome tune.</string>
    <string name="PURCHASE_COMBO_API_CONTENT_BLOCKED_PROFILE">Dear Subscriber, you are currently active on the Profile tunes pack. To deactivate CALL or SMS STOP to 24000 Toll free and then try activating through Welcome tune App.</string>
    <string name="PURCHASE_COMBO_API_LOCKED_USER">You cannot change your tunes since your Welcome tune service is locked. To Unlock, SMS CT UNLOCK to 56789 at Rs. 5/SMS</string>
    <string name="PURCHASE_COMBO_CORPORATE_CONTEN_NOT_ALLOWED">CorporateTune is active on your number, hence song selection cannot be done. For further assistance please contact your Relationship Manager.</string>
    <string name="RBT_CATEGORY_DOESNT_EXIST">We are facing a temporary issue in setting this tune as your Welcome tune. Please try after some time.</string>
    <string name="RBT_CONTENT_BLOCKED_ADRBT">Dear Subscriber, you are currently active on the Advertisement Welcome tune pack. To deactivate, CALL or SMS STOP to 24000 Toll free and then try activating through Welcome tune App.</string>
    <string name="RBT_CONTENT_BLOCKED_CORP_USER">Corporate tune is active on your number, hence Welcome tune cannot be changed. To change, please contact your Company Admin.</string>
    <string name="RBT_CONTENT_BLOCKED_LITE_USER">You are not allowed to activate this Welcome tune as this is a premium Welcome tune.</string>
    <string name="RBT_CONTENT_BLOCKED_PROFILE">Dear Subscriber, you are currently active on the Profile tunes pack. To deactivate, CALL or SMS STOP to 24000 Toll free and then try activating through Welcome tune App.</string>
    <string name="RBT_CONTENT_EXPIRED">We are facing a temporary issue in setting this tune as your Welcome tune. Please try after some time.</string>
    <string name="RBT_DEACTIVATE_SELECTION_ERROR">We are facing a temporary issue. Please try after some time.</string>
    <string name="RBT_INTERNAL_SERVER_ERROR">We are facing a temporary issue. Please try after some time.</string>
    <string name="RBT_INVALID_PARAMETER">We are facing a temporary issue. Please try after some time.</string>
    <string name="RBT_INVALID_SHUFFLE_LIST_ID">Invalid selection. Please try a different selection.</string>
    <string name="RBT_INVALID_SUBSCRIBER_ID">We are facing a temporary issue with your subscription details. Please try after some time.</string>
    <string name="RBT_LOCKED_USER">You cannot change your tunes since your Welcome tune service is locked.</string>
    <string name="RBT_MAX_UDP_LIMIT_REACHED">Oh ! Already created maximum shuffles, use one of them or delete one to create a new one.</string>
    <string name="RBT_OFFER_NOT_FOUND">No offer available</string>
    <string name="RBT_OPERATION_NOT_ALLOWED">This tune cannot be set as your Welcome tune for your number. Please contact Customer Care.</string>
    <string name="RBT_PLAY_RULE_NOT_EXIST">Cannot delete a Welcome tune without selecting callers.</string>
    <string name="RBT_SONG_EXPIRED">We are facing a temporary issue in setting this tune as your Welcome tune. Please try after some time.</string>
    <string name="RBT_SONG_NOT_FOUND">We are facing a temporary issue in setting this tune as your Welcome tune. Please try after some time.</string>
    <string name="RBT_SUBSCRIBER_GRACE">Your previous subscription is pending for renewal, please recharge with sufficient amount to continue with the service.</string>
    <string name="RBT_SUBSCRIBER_SUSPENDED">Your subscription is currently suspended. Please contact Customer Care for more details.</string>
    <string name="RBT_SUB_ACT_PENDING">Your previous activation request is in pending state. You do not have sufficient balance to activate the service .Please re-try after sometime.</string>
    <string name="RBT_SUB_ALREADY_EXIST">You have already Subscribed to this Service.</string>
    <string name="RBT_SUB_ALREADY_OWNS_CONTENT">This tune is already set as your Welcome tune for your selected Callers.</string>
    <string name="RBT_SUB_DEACT_PENDING">Your de-activation request is pending. Please re-try after some time.</string>
    <string name="RBT_SUB_DOESNT_EXIST">Welcome tune cannot be set for this number. Please try after some time.</string>
    <string name="RBT_SUB_DOESNT_OWN_CONTENT">There is some Technical Error! Kindly try again after some time.</string>
    <string name="RBT_SUB_STATUS_CHANGE_NOT_ALLOWED">Cannot change status of your subscription. Please contact customer care.</string>
    <string name="RBT_UDP_IS_ACTIVE">This tune is already set as your Welcome tune for your selected callers.</string>
    <string name="RBT_UNKNOWN_ERROR">We are facing a temporary issue. Please try after some time.</string>
    <string name="REMOVE_PALYRULE_API_RBT_PLAY_RULE_NOT_EXIST">Dear Customer, Your previous request is already being processed. Kindly try again after some time.</string>
    <string name="REMOVE_PALYRULE_API_RBT_SUB_DOESNT_EXIST">Please Register before setting the Welcome tune.</string>
    <string name="REMOVE_PALYRULE_API_RBT_UNKNOWN_ERROR">Dear Customer, Your previous request is already being processed. Kindly try again after some time.</string>
    <string name="SONG_PURCHASE_API_RBT_CATEGORY_DOESNT_EXIST">We are facing a temporary issue in setting this tune as your Welcome tune. Please try after some time.</string>
    <string name="activity">Gallery</string>
    <string name="all_fields_are_required_to_be_completed">All fields are required to be completed</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_code">Apply Code</string>
    <string name="code_resent">Code resent</string>
    <string name="continue_text">Continue</string>
    <string name="copy_code">Copy Code</string>
    <string name="did_not_receive_code">Didn’t receive the code?</string>
    <string name="did_not_receive_code_instruction">Check your spam folder. It could take upto a few minutes for the code to be delivered.</string>
    <string name="e_bill_email_otp_verification_header_instruction">Enter the verification code sent to &lt;b>%s&lt;/b></string>
    <string name="ebill_address_change_pin_header_instruction">Enter the PIN sent to &lt;b>%s&lt;/b></string>
    <string name="enter_the_4_digit_pin">Enter the 4 Digit PIN</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="force_update_direct_txt_bn">ফ্রি ডাউনলোড</string>
    <string name="force_update_message_bn">MyGP ব্যবহার করতে আপডেট করুন:</string>
    <string name="force_update_or_bn">অথবা</string>
    <string name="force_update_title_bn">আপডেট প্রয়োজন</string>
    <string name="fore_update_trademark_note">"Google Play and the Google Play logo are
trademarks of Google LLC."</string>
    <string name="from_email">From</string>
    <string name="giving_mygp_your_location_will_allow_for_a_more_personalized_experience">Giving MyGP your location will allow for a more personalized experience</string>
    <string name="go_to_home">Go to Home</string>
    <string name="issue_type">Issue</string>
    <string name="live_chat_text">Live Chat</string>
    <string name="locate_me">Locate Me</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="message">Message</string>
    <string name="offer_type_popularity">Popularity</string>
    <string name="offer_type_price">Price</string>
    <string name="offer_type_validity">Validity</string>
    <string name="offer_type_volume">Volume</string>
    <string name="offers_sort_popup_title">Sort by</string>
    <string name="or_submit_a_complaint">Or submit a complaint</string>
    <string name="placeholder_name">Placeholder name</string>
    <string name="please_describe_your_complaint">Please describe your complaint</string>
    <string name="profile">Manage</string>
    <string name="provide_your_location_for_a_better_experience">Provide Your Location for a Better Experience</string>
    <string name="resend_pin">Resend PIN</string>
    <string name="store">Store</string>
    <string name="submit">Submit</string>
    <string name="tab_home">Discover</string>
    <string name="terms_and_conditions_of_live_chat_services">Terms and Conditions of Live Chat Services</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="verification_code">Verification code</string>
    <string name="welcome_to_our_livechat">Welcome to our LiveChat!</string>
    <string name="what_is_your_name">"What's your name?"</string>
    <string name="wrong_pin">Wrong PIN</string>
    <string name="you_can_always_change_this_from_settings">You can always change this from settings</string>
    <string name="your_promo_code">Your Promo Code</string>
</resources>