<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/fontSize16" android:id="@id/textView10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/welcome_to_our_livechat" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <TextView android:textSize="@dimen/fontSize14" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/what_is_your_name" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/fontSize14" android:textColor="@color/red" android:id="@id/name_err_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/this_field_is_required" android:layout_weight="1.0" style="@style/MyGPItalic" />
        </LinearLayout>
        <EditText android:textSize="@dimen/fontSize14" android:id="@id/name_field" android:background="@drawable/all_borders" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:hint="@string/placeholder_name" android:maxLines="1" android:inputType="textMultiLine" />
        <Button android:theme="@style/BtnSubmit" android:layout_gravity="center_horizontal" android:id="@id/btnLiveChat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/live_chat_text" style="@style/Widget.AppCompat.Button.Colored" />
        <TextView android:textSize="@dimen/fontSize12" android:textColor="@color/colorPrimary" android:gravity="center_horizontal" android:id="@id/tv_terms_conditions" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/terms_and_conditions_of_live_chat_services" style="@style/MyGPBold" />
        <TextView android:textSize="@dimen/fontSize16" android:id="@id/textView11" android:paddingTop="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/or_submit_a_complaint" />
        <TextView android:textSize="@dimen/fontSize14" android:textColor="@color/colorGreyText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/all_fields_are_required_to_be_completed" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <TextView android:textSize="@dimen/fontSize14" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/from_email" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/fontSize14" android:textColor="@color/red" android:id="@id/email_err_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/this_field_is_required" android:layout_weight="1.0" style="@style/MyGPItalic" />
        </LinearLayout>
        <EditText android:textSize="@dimen/fontSize14" android:id="@id/email_adress_field" android:background="@drawable/all_borders" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:hint="@string/enter_your_email_address" android:maxLines="1" android:inputType="textEmailAddress" />
        <TextView android:textSize="@dimen/fontSize14" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/issue_type" />
        <LinearLayout android:background="@drawable/all_borders" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip">
            <Spinner android:theme="@style/ThemeOverlay.AppCompat.Light" android:id="@id/issue_spinner" android:layout_width="fill_parent" android:layout_height="35.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <TextView android:textSize="@dimen/fontSize14" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/message" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/fontSize14" android:textColor="@color/red" android:id="@id/msg_err_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/this_field_is_required" android:layout_weight="1.0" style="@style/MyGPItalic" />
        </LinearLayout>
        <EditText android:textSize="@dimen/fontSize14" android:gravity="start" android:id="@id/msg_field" android:background="@drawable/all_borders" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:minHeight="100.0dip" android:hint="@string/please_describe_your_complaint" android:inputType="textMultiLine" />
        <Button android:theme="@style/BtnSubmit" android:layout_gravity="center_horizontal" android:id="@id/btnSendComplaint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/submit" style="@style/Widget.AppCompat.Button.Colored" />
    </LinearLayout>
</ScrollView>