<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_home_black_24dp" android:enabled="true" android:id="@id/action_home" android:orderInCategory="1" android:title="@string/tab_home" app:showAsAction="ifRoom|withText" />
    <item android:icon="@drawable/ic_store_black_24dp" android:enabled="true" android:id="@id/action_store" android:orderInCategory="2" android:title="@string/store" app:showAsAction="ifRoom|withText" />
    <item android:icon="@drawable/ic_activity_black_24dp" android:enabled="true" android:id="@id/action_activity" android:orderInCategory="3" android:title="@string/activity" app:showAsAction="ifRoom|withText" />
    <item android:icon="@drawable/ic_profile_black_24dp" android:enabled="true" android:id="@id/action_profile" android:orderInCategory="4" android:title="@string/profile" app:showAsAction="ifRoom|withText" />
</menu>