<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_radius_white" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:minWidth="300.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/fontSize18" android:textStyle="bold" android:id="@id/txtTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/offers_sort_popup_title" style="@style/MyGPMedium" />
    <RadioGroup android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <RadioButton android:textSize="@dimen/fontSize16" android:id="@id/radioPopularity" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:text="@string/offer_type_popularity" />
        <RadioButton android:textSize="@dimen/fontSize16" android:id="@id/radioVolume" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:text="@string/offer_type_volume" />
        <RadioButton android:textSize="@dimen/fontSize16" android:id="@id/radioPrice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:text="@string/offer_type_price" />
        <RadioButton android:textSize="@dimen/fontSize16" android:id="@id/radioValidity" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:text="@string/offer_type_validity" />
    </RadioGroup>
</LinearLayout>