<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/white" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/fontSize16" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/welcome_to_our_livechat" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
            <TextView android:textSize="@dimen/fontSize14" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/what_is_your_name" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/fontSize14" android:textColor="@color/red" android:id="@id/nameErrText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/this_field_is_required" android:layout_weight="1.0" style="@style/MyGPItalic" />
        </LinearLayout>
        <EditText android:textSize="@dimen/fontSize14" android:id="@id/nameField" android:background="@drawable/all_borders" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:hint="@string/placeholder_name" android:maxLines="1" android:inputType="textMultiLine" />
        <com.portonics.mygp.ui.widgets.LoadingButton android:layout_gravity="center_horizontal" android:id="@id/btnLiveChat" android:paddingLeft="42.0dip" android:paddingRight="42.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" app:text="@string/live_chat_text" app:textSize="@dimen/fontSize16" />
        <TextView android:textSize="@dimen/fontSize12" android:textColor="@color/colorPrimaryDark" android:gravity="center_horizontal" android:id="@id/tvTermsConditions" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/terms_and_conditions_of_live_chat_services" style="@style/MyGPBold" />
    </LinearLayout>
</ScrollView>