<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_radius_white" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_gravity="center_horizontal" android:layout_width="82.0dip" android:layout_height="86.0dip" android:layout_marginTop="16.0dip" android:src="@drawable/ic_maps_marker" />
    <TextView android:textSize="@dimen/fontSize18" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/provide_your_location_for_a_better_experience" />
    <TextView android:textSize="@dimen/fontSize14" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/giving_mygp_your_location_will_allow_for_a_more_personalized_experience" />
    <TextView android:textSize="@dimen/fontSize14" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/you_can_always_change_this_from_settings" />
    <com.google.android.material.button.MaterialButton android:id="@id/btnLater" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/maybe_later" style="@style/Widget.MaterialComponents.Button.TextButton" />
    <com.portonics.mygp.ui.widgets.LoadingButton android:id="@id/btnLocate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:foreground="?selectableItemBackground" app:text="@string/locate_me" app:textSize="@dimen/fontSize16" />
</LinearLayout>