<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/fontSize20" android:textColor="@color/gpTextBlack" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="18.0dip" android:text="@string/force_update_title_bn" android:lineSpacingExtra="3.0sp" />
    <TextView android:textSize="@dimen/fontSize16" android:textColor="@color/black" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="40.0dip" android:text="@string/force_update_message_bn" android:lineSpacingExtra="5.0sp" />
    <ImageView android:id="@id/btnStore" android:focusable="true" android:clickable="true" android:layout_width="172.0dip" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:src="@drawable/google_play_badge" />
    <TextView android:textSize="16.0sp" android:textColor="@color/gpTextBlack" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" android:text="@string/force_update_or_bn" android:lineSpacingExtra="5.0sp" />
    <TextView android:textSize="@dimen/fontSize20" android:textColor="@color/gpTextBlack" android:gravity="center" android:id="@id/btnDirect" android:background="@drawable/all_borders_gray_stroke_corner_3dp" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="172.0dip" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="24.0dip" android:text="@string/force_update_direct_txt_bn" android:lineSpacingExtra="1.0sp" />
    <TextView android:textSize="@dimen/fontSize12" android:textColor="@color/gpDarkGray" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:text="@string/fore_update_trademark_note" android:lineSpacingExtra="3.0sp" style="@style/MyGPMedium" />
</LinearLayout>