<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:theme="@style/Material_AppTheme" android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/appbar" layout="@layout/app_bar" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip">
            <TextView android:textSize="@dimen/fontSize16" android:id="@id/tvVerificationCodeEmailInstruction" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/e_bill_email_otp_verification_header_instruction" android:lineSpacingExtra="4.0dip" />
            <TextView android:textSize="@dimen/fontSize14" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/verification_code" />
            <EditText android:textSize="@dimen/fontSize14" android:id="@id/etEBillOTP" android:background="@drawable/bg_form_input" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:maxLines="1" android:inputType="text" />
            <LinearLayout android:orientation="vertical" android:id="@id/layoutErrorContainer" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/fontSize14" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/wrong_pin" />
                <View android:background="@drawable/bg_form_error" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            </LinearLayout>
            <Button android:theme="@style/BtnSubmit" android:textSize="16.0dip" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@id/btnContinue" android:background="@color/colorAccent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/continue_text" android:textAllCaps="false" style="@style/Widget.AppCompat.Button.Colored" />
            <TextView android:textSize="@dimen/fontSize14" android:textColor="@color/gpTextBlack" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/did_not_receive_code" />
            <TextView android:textSize="@dimen/fontSize14" android:textColor="@color/gpDarkGray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/did_not_receive_code_instruction" android:lineSpacingExtra="4.0dip" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>