<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_radius_white" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/fontSize16" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/your_promo_code" android:textAlignment="center" />
    <TextView android:textSize="@dimen/fontSize26" android:id="@id/tvCode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:textAlignment="center" />
    <com.google.android.material.button.MaterialButton android:id="@id/btnCopy" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/copy_code" style="@style/Widget.MaterialComponents.Button.TextButton" />
    <com.google.android.material.button.MaterialButton android:id="@id/btnApply" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/apply_code" />
    <com.google.android.material.button.MaterialButton android:id="@id/btnGotoHome" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/go_to_home" style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
</LinearLayout>